name:               mudblood
version:            0.1.0.0
license:            GPL-3
license-file:       LICENSE
author:             Philip Kranz
maintainer:         philip.kranz@googlemail.com
category:           Game
build-type:         Simple
cabal-version:      >=1.8

data-dir:           res
data-files:         gui.glade

Flag Debug
    description:    Enable debugging
    default:        False

Flag Gtk
    description:    Include GTK frontend
    default:        False

Flag Vty
    description:    Include Vty frontend
    default:        True

executable mudblood
    main-is:            Main.hs
    ghc-options:        -O1 -threaded -auto-all -caf-all -rtsopts -with-rtsopts=-N
    other-modules:      Paths_mudblood
    build-depends:      base, mtl, utf8-string, bytestring, monad-coroutine,
                        network, hint, containers, split, binary, MissingH,
                        parsec, either, regex-base, regex-tdfa, array,
                        free, json, fgl, filepath, directory, lens, time, colour, has
    hs-source-dirs:     src

    if os(windows)
        ghc-options:    -optl-mwindows

    if flag(vty)
        build-depends:  unix, terminfo, ansi-terminal, vty ==5.0.0, stm, process

    if flag(gtk)
        build-depends:  gtk, pango, cairo
