name:               mudblood
version:            0.1.0.0
license:            GPL-3
license-file:       LICENSE
author:             Philip Kranz
maintainer:         philip.kranz@googlemail.com
category:           Game
build-type:         Simple
cabal-version:      >=1.8

data-dir:           res
data-files:         gui.glade

Flag Debug
    description:    Enable debugging
    default:        False

executable mudblood-mg-gtk
    main-is:            Main-MG-Gtk.hs
    ghc-options:        -O1 -threaded -rtsopts -with-rtsopts=-N
    other-modules:      Paths_mudblood
    build-depends:      base, mtl, utf8-string, bytestring, monad-coroutine,
                        network, hint, containers, split, binary, MissingH,
                        parsec, either, regex-base, regex-tdfa, array,
                        free, json, fgl, filepath, directory, lens, time, colour, has
    hs-source-dirs:     src

    if os(windows)
        ghc-options:    -optl-mwindows

    build-depends:  gtk, pango, cairo

executable mudblood-mg-vty
    main-is:            Main-MG-Vty.hs
    ghc-options:        -O1 -threaded -rtsopts -with-rtsopts=-N
    other-modules:      Paths_mudblood
    build-depends:      base, mtl, utf8-string, bytestring, monad-coroutine,
                        network, hint, containers, split, binary, MissingH,
                        parsec, either, regex-base, regex-tdfa, array,
                        free, json, fgl, filepath, directory, lens, time, colour, has
    hs-source-dirs:     src

    build-depends:  unix, terminfo, ansi-terminal, vty ==5.0.0, stm, process
